force-app/main/default/objects/Meeting_Participant__c/Meeting_Participant__c.object-meta.xml
<CustomObject>
    <description>Tracks information related to each participant of a JamCloud meeting.</description>
    <label>Meeting Participant</label>
    <nameField>
        <label>Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>