force-app/main/default/objects/Meeting_Participant__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce Contact that represents this participant.</description>
    <inlineHelpText>The Salesforce Contact that represents this participant.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meeting Participants</relationshipLabel>
    <relationshipName>Meeting_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>