force-app/main/default/objects/Meeting_Participant__c/fields/Is_Moderator__c.field-meta.xml
<CustomField>
    <fullName>Is_Moderator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This should be checked if the participant is the moderator of the meeting.</description>
    <inlineHelpText>This should be checked if the participant is the moderator of the meeting.</inlineHelpText>
    <label>Is Moderator</label>
    <type>Checkbox</type>
</CustomField>