force-app/main/default/objects/Meeting_Participant__c/fields/Join_Time__c.field-meta.xml
<CustomField>
    <fullName>Join_Time__c</fullName>
    <description>The time this participant joined the JamCloud meeting.</description>
    <inlineHelpText>The time this participant joined the JamCloud meeting.</inlineHelpText>
    <label>Join Time</label>
    <type>DateTime</type>
</CustomField>