force-app/main/default/objects/Meeting_Participant__c/fields/Leave_Time__c.field-meta.xml
<CustomField>
    <fullName>Leave_Time__c</fullName>
    <description>The time this participant left the JamCloud meeting.</description>
    <inlineHelpText>The time this participant left the JamCloud meeting.</inlineHelpText>
    <label>Leave Time</label>
    <type>DateTime</type>
</CustomField>