force-app/main/default/objects/Meeting_Participant__c/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <description>The meeting that this participant was involved in.</description>
    <inlineHelpText>The meeting that this participant was involved in.</inlineHelpText>
    <label>Meeting</label>
    <referenceTo>Meeting__c</referenceTo>
    <relationshipLabel>Meeting Participants</relationshipLabel>
    <relationshipName>Meeting_Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>